--- a/src/components/Navigation/SideDrawer/SideDrawer.module.css
+++ b/src/components/Navigation/SideDrawer/SideDrawer.module.css
@@ -10,6 +10,7 @@
     padding: 32px 16px;
     box-sizing: border-box;
     transition: transform 0.3s ease-out;
+    border-right: 2px solid red;
 }
 
 @media (min-width: 500px) {
@@ -24,4 +25,8 @@
 
 .Close {
     transform: translateX(-100%);
+}
+
+.Logo {
+    height: 11%;
 }
